test/unittest/error/tst.DTRACEFLT_BADADDR.r
The arguments are 3 1 -1 1 0
The value of arg4 should be 1
The value of arg5 should be 0

-- @@stderr --
dtrace: error on enabled probe ID 3 (ID 1: dtrace:::BEGIN): invalid address ({ptr}) in action #1
